--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a:hover {
 }
 
 .banner {
-  background-image: url(/images/background.jpg);
+  background-image: url(images/background.jpg);
   background-size: cover;
   background-position: center;
   color: white;
@@ -87,6 +87,8 @@ footer {
   margin-top: 30px;
   color: white;
 }
+
+/* Card media queries */
 
 @media (max-width: 800px) {
   .cards {
